[tool.poetry]
name = "courant"
version = "0.1.0"
description = "An opinionated photo stream site generator"
authors = ["Aaron Toth <atoth89@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/aaront/courant"
keywords = ["static", "generator", "photography", "gallery", "blog"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.dependencies]
python = "^3.8"
mistune = {version = "^2.0.0-alpha.3", allow-prereleases = true}
pillow = "^7.1.1"
jinja2 = "^2.11.2"
click = "^7.1.1"
tomlkit = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
flake8-mypy = "^17.8.0"
flake8-black = "^0.1.1"
bandit = "^1.6.2"

[tool.poetry.scripts]
courant = "courant.console:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
